syntax = "proto3";

package flowdeploy.v1;

option go_package = "github.com/paasdeploy/backend/gen/go/flowdeploy/v1;flowdeployv1";

import "flowdeploy/v1/deploy.proto";
import "flowdeploy/v1/server.proto";
import "flowdeploy/v1/common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AgentService {
  rpc Register(RegisterRequest) returns (RegisterResponse);

  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);

  rpc ExecuteDeploy(DeployRequest) returns (DeployResponse);

  rpc StreamDeployLogs(DeployLogSubscription) returns (stream DeployLogEntry);

  rpc ListContainers(ListContainersRequest) returns (ListContainersResponse);

  rpc GetContainerLogs(ContainerLogsRequest) returns (stream ContainerLogEntry);

  rpc GetContainerStats(ContainerStatsRequest) returns (stream ContainerStats);

  rpc RestartContainer(RestartContainerRequest) returns (RestartContainerResponse);

  rpc StopContainer(StopContainerRequest) returns (StopContainerResponse);

  rpc GetSystemInfo(google.protobuf.Empty) returns (SystemInfo);

  rpc GetSystemMetrics(google.protobuf.Empty) returns (SystemMetrics);

  rpc GetDockerInfo(google.protobuf.Empty) returns (DockerInfo);

  rpc StartContainer(StartContainerRequest) returns (StartContainerResponse);

  rpc ListImages(ListImagesRequest) returns (ListImagesResponse);

  rpc RemoveImage(RemoveImageRequest) returns (RemoveImageResponse);

  rpc PruneImages(PruneImagesRequest) returns (PruneImagesResponse);

  rpc ListNetworks(ListNetworksRequest) returns (ListNetworksResponse);

  rpc CreateNetwork(CreateNetworkRequest) returns (CreateNetworkResponse);

  rpc RemoveNetwork(RemoveNetworkRequest) returns (RemoveNetworkResponse);

  rpc ListVolumes(ListVolumesRequest) returns (ListVolumesResponse);

  rpc CreateVolume(CreateVolumeRequest) returns (CreateVolumeResponse);

  rpc RemoveVolume(RemoveVolumeRequest) returns (RemoveVolumeResponse);
}
